--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 -------------------------------------------------------------------*/
 
 body {
+    /*
     color: #999999;
     font-size: 14px;
     font-family: 'Roboto Mono', monospace;
