--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1165,6 +1165,7 @@ section .container {
   font-size: 13px;
   color: #fff;
   z-index: 999999;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 @media (max-width: 992px) {
